--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="#program" class="cta-button">Моя программа</a>
             </div>
             <div class="hero-image">
-                <img src="https://i.ibb.co/L84tYy3/dima-placeholder.png" alt="Дмитрий Дейнеко">
+                <img src="photo.png" alt="Дмитрий Дейнеко">
             </div>
         </div>
     </header>
@@ -92,9 +92,9 @@
         <section class="team-section">
             <h2>Моя команда</h2>
             <div class="team-plaques">
-                <div class="team-plaque" data-modal-target="#modal-maria"><h3>Мария</h3><p>Арт-директор</p></div>
-                <div class="team-plaque" data-modal-target="#modal-ivan"><h3>Иван</h3><p>Спортивный координатор</p></div>
-                <div class="team-plaque" data-modal-target="#modal-alex"><h3>Алексей</h3><p>Технический гуру</p></div>
+                <div class="team-plaque" data-modal-target="#modal-maria"><h3>Дима</h3><p>Осетров</p></div>
+                <div class="team-plaque" data-modal-target="#modal-ivan"><h3>Рома</h3><p>Клименко</p></div>
+                <div class="team-plaque" data-modal-target="#modal-alex"><h3>Илья</h3><p>Чернышов</p></div>
             </div>
         </section>
         
@@ -102,7 +102,7 @@
             <h2>Разрушители мифов</h2>
             <div class="myth-grid">
                 <div class="myth" data-modal-target="#modal-myth1"><h3>🤔 Миф №1</h3><p>"Это всё просто красивые обещания, ничего не изменится". Подробнее...</p></div>
-                <div class="myth" data-modal-target="#modal-myth2"><h3>💰 Миф №2</h3><p>"На VR и прочие крутые штуки у школы нет денег". Подробнее...</p></div>
+                <div class="myth" data-modal-target="#modal-myth2"><h3>💰 Миф №2</h3><p>"На различные проекты и прочие крутые штуки у школы нет денег". Подробнее...</p></div>
                 <div class="myth" data-modal-target="#modal-myth3"><h3>📋 Миф №3</h3><p>"Нам всё равно не разрешит администрация". Подробнее...</p></div>
             </div>
         </section>
@@ -139,15 +139,16 @@
     <div class="modal" id="modal-culture"> <div class="modal-header"><h2>🎨 Культура и творчество</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Здесь будет подробное описание творческих инициатив...</p></div></div>
     <div class="modal" id="modal-sport"> <div class="modal-header"><h2>⚽ Спорт и здоровье</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Здесь будет подробное описание спортивных инициатив...</p></div></div>
     <div class="modal" id="modal-dev"> <div class="modal-header"><h2>🧠 Учёба и развитие</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Здесь будет подробное описание учебных инициатив...</p></div></div>
-    <div class="modal team-modal" id="modal-maria"><div class="modal-body"><img src="https://i.pravatar.cc/200?u=maria" alt="Фото Марии"><div class="team-modal-content"><h2>Мария <button class="close-button">&times;</button></h2><h3>Арт-директор</h3><p>Мария будет курировать все творческие инициативы.</p></div></div></div>
-    <div class="modal team-modal" id="modal-ivan"><div class="modal-body"><img src="https://i.pravatar.cc/200?u=ivan" alt="Фото Ивана"><div class="team-modal-content"><h2>Иван <button class="close-button">&times;</button></h2><h3>Спортивный координатор</h3><p>Иван возьмет на себя организацию школьной лиги.</p></div></div></div>
-    <div class="modal team-modal" id="modal-alex"><div class="modal-body"><img src="https://i.pravatar.cc/200?u=alex" alt="Фото Алексея"><div class="team-modal-content"><h2>Алексей <button class="close-button">&times;</button></h2><h3>Технический гуру</h3><p>Алексей поможет нам с запуском школьного подкаста.</p></div></div></div>
+    <div class="modal team-modal" id="modal-maria"><div class="modal-body"><img src="1.png" alt="Фото Марии"><div class="team-modal-content"><h2>Дима <button class="close-button">&times;</button></h2><h3>Осетров</h3><p>О себе:
+Увлекаюсь смешанными единоборствами. Местами тихий, нахожу со всеми общий язык.</p></div></div></div>
+    <div class="modal team-modal" id="modal-ivan"><div class="modal-body"><img src="2.png" alt="Фото Ивана"><div class="team-modal-content"><h2>Рома <button class="close-button">&times;</button></h2><h3>Клименко</h3><p>Бебебе</p></div></div></div>
+    <div class="modal team-modal" id="modal-alex"><div class="modal-body"><img src="3.png" alt="Фото Алексея"><div class="team-modal-content"><h2>Илья <button class="close-button">&times;</button></h2><h3>Чернышов</h3><p>О себе: Давно увлекаюсь спортом, занимаюсь тайским боксом и ММА, обожаю чай, а также люблю читать книги.</p></div></div></div>
     <div class="modal" id="modal-myth1"> <div class="modal-header"><h2>Миф: "Это всё обещания"</h2><button class="close-button">&times;</button></div><div class="modal-body"><strong>✅ Правда:</strong> Каждая моя инициатива — это не мечта, а проект с конкретными шагами.</div></div>
     <div class="modal" id="modal-myth2"> <div class="modal-header"><h2>Миф: "Нет денег"</h2><button class="close-button">&times;</button></div><div class="modal-body"><strong>✅ Правда:</strong> Многие инициативы не требуют больших финансовых вложений.</div></div>
-    <div class="modal" id="modal-myth3"> <div class="modal-header"><h2>Миф: "Не разрешит администрация"</h2><button class="close-button">&times;</button></div><div class="modal-body"><strong>✅ Правда:</strong> Я уже провел предварительные консультации с завучем.</div></div>
+    <div class="modal" id="modal-myth3"> <div class="modal-header"><h2>Миф: "Не разрешит администрация"</h2><button class="close-button">&times;</button></div><div class="modal-body"><strong>✅ Правда:</strong> Мы всегда можем обсудить всё с администрацией школы, а если что-то не получается - мы можем договорится.</div></div>
     <div class="modal" id="modal-event1"> <div class="modal-header"><h2>Встреча в главном холле</h2><button class="close-button">&times;</button></div><div class="modal-body"><p><strong>Когда:</strong> 28 сентября, большая перемена.</p></div></div>
     <div class="modal" id="modal-event2"> <div class="modal-header"><h2>Школьные дебаты</h2><button class="close-button">&times;</button></div><div class="modal-body"><p><strong>Когда:</strong> 5 октября, 14:00.</p></div></div>
-    <div class="modal" id="modal-socials"><div class="modal-header"><h2>Мои контакты</h2><button class="close-button">&times;</button></div><div class="modal-body socials-modal-body"><a href="#" class="social-link">💬 Мой VK</a><a href="#" class="social-link">🏫 VK нашей школы</a><a href="#" class="social-link">✈️ Мой Telegram</a></div></div>
+    <div class="modal" id="modal-socials"><div class="modal-header"><h2>Мои контакты</h2><button class="close-button">&times;</button></div><div class="modal-body socials-modal-body"><a href="https://vk.com/dilwear" class="social-link" target="_blank">💬 Мой VK</a><a href="https://vk.com/vectoruspeha31" class="social-link" target="_blank">🏫 VK нашей школы</a><a href="https://t.me/deyneko31" class="social-link" target="_blank">✈️ Мой Telegram</a></div></div>
 
     <script src="script.js"></script>
 </body>
