--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <section id="about" class="about-section">
             <h2>Я здесь, чтобы слушать и действовать</h2>
-            <p>"Дима слышит каждого" — это не просто слова. Это мой главный принцип. Моя цель — сделать нашу школу местом, куда хочется приходить каждый день.</p>
+            <p>"Слушаю вас, делаю для вас." — это не просто слова. Это мой главный принцип. Моя цель — сделать нашу школу местом, куда хочется приходить каждый день.</p>
         </section>
 
         <section id="feedback" class="feedback-section">
@@ -45,15 +45,9 @@
                 <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/u/68dd628b4936390be754b26c?iframe=1" frameborder="0" name="ya-form-68dd628b4936390be754b26c" width="100%"></iframe>
             </div>
         </section>
-        <section class="video-section">
-            <h2>Моё видеообращение</h2>
-            <div class="video-container">
-                <iframe src="https://rutube.ru/play/embed/325a52eb4991db8ef857160bad229fde" frameborder="0" allow="clipboard-write; autoplay" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-            </div>
-        </section>
-
+ 
         <section class="countdown-section">
-            <h2>До выборов осталось:</h2>
+            <h2>До мероприятия осталось:</h2>
             <div id="countdown" class="countdown">
                 <div class="countdown-item"><span id="days">00</span><p>Дней</p></div>
                 <div class="countdown-item"><span id="hours">00</span><p>Часов</p></div>
@@ -65,7 +59,7 @@
         <section id="program" class="program-section">
             <h2>Моя программа</h2>
             <div class="initiatives-grid">
-                <div class="card" data-modal-target="#modal-tech"><h3>🚀 Технологии и медиа</h3><p>VR-уроки, школьный подкаст, digital-карта школы. Узнай больше...</p></div>
+                <div class="card" data-modal-target="#modal-tech"><h3>🚀 Технологии и медиа</h3><p>Возобновление медиа-центров, кружки и другое. Узнай больше...</p></div>
                 <div class="card" data-modal-target="#modal-culture"><h3>🎨 Культура и творчество</h3><p>Арт-проекты, музыкальные вечера, клуб медиа. Узнай больше...</p></div>
                 <div class="card" data-modal-target="#modal-sport"><h3>⚽ Спорт и здоровье</h3><p>Мультиспорт-зона, эко-фитнес, школьная лига. Узнай больше...</p></div>
                 <div class="card" data-modal-target="#modal-dev"><h3>🧠 Учёба и развитие</h3><p>Менторская программа, стартап-клуб, мастер-классы. Узнай больше...</p></div>
@@ -110,8 +104,7 @@
         <section class="events-section">
             <h2>Календарь кампании</h2>
             <div class="events-list">
-                <div class="event-item" data-modal-target="#modal-event1"><div class="event-date"><span>28</span>СЕН</div><div class="event-details"><h3>Встреча в главном холле</h3><p>Отвечаю на ваши вопросы на большой перемене. Кликни, чтобы узнать детали.</p></div></div>
-                <div class="event-item upcoming" data-modal-target="#modal-event2"><div class="event-date"><span>05</span>ОКТ</div><div class="event-details"><h3>Школьные дебаты</h3><p>Главное событие кампании! Актовый зал, 14:00. Кликни, чтобы узнать детали.</p></div></div>
+                <div class="event-item upcoming" data-modal-target="#modal-event2"><div class="event-date"><span>14</span>ОКТ</div><div class="event-details"><h3>Школьные дебаты</h3><p>Главное событие кампании! Актовый зал, 14:00. Кликни, чтобы узнать детали.</p></div></div>
             </div>
         </section>
 
@@ -135,10 +128,10 @@
     <a id="scrollTopButton" class="scroll-top-button">↑</a>
     
     <div id="overlay"></div>
-    <div class="modal" id="modal-tech"> <div class="modal-header"><h2>🚀 Технологии и медиа</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Здесь будет подробное описание технологических инициатив...</p></div></div>
-    <div class="modal" id="modal-culture"> <div class="modal-header"><h2>🎨 Культура и творчество</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Здесь будет подробное описание творческих инициатив...</p></div></div>
-    <div class="modal" id="modal-sport"> <div class="modal-header"><h2>⚽ Спорт и здоровье</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Здесь будет подробное описание спортивных инициатив...</p></div></div>
-    <div class="modal" id="modal-dev"> <div class="modal-header"><h2>🧠 Учёба и развитие</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Здесь будет подробное описание учебных инициатив...</p></div></div>
+    <div class="modal" id="modal-tech"> <div class="modal-header"><h2>🚀 Технологии и медиа</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Развитие технологической инфраструктуры: создание школьного медиа-центра для видеоблогинга, подкастов и онлайн-изданий. Введение кружка по программированию и робототехнике, организация мастер-классов по цифровой безопасности и дизайну.</p></div></div>
+    <div class="modal" id="modal-culture"> <div class="modal-header"><h2>🎨 Культура и творчество</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Организация регулярных творческих вечеров, где каждый сможет выступить со своими стихами, песнями или музыкальными номерами. Проведение "Дней открытых дверей" для школьных клубов и секций, а также ежегодного фестиваля талантов.</p></div></div>
+    <div class="modal" id="modal-sport"> <div class="modal-header"><h2>⚽ Спорт и здоровье</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Создание "мультиспорт-зоны" с инвентарем для разных видов спорта, доступным на переменах. Проведение школьных соревнований по волейболу, футболу и баскетболу. Организация лекций по здоровому питанию и физической активности.</p></div></div>
+    <div class="modal" id="modal-dev"> <div class="modal-header"><h2>🧠 Учёба и развитие</h2><button class="close-button">&times;</button></div><div class="modal-body"><p>Запуск менторской программы, где старшеклассники будут помогать младшим ученикам. Создание школьного стартап-клуба, где можно будет развивать свои бизнес-идеи. Проведение интерактивных мастер-классов с приглашёнными экспертами.</p></div></div>
     <div class="modal team-modal" id="modal-maria"><div class="modal-body"><img src="1.png" alt="Фото Марии"><div class="team-modal-content"><h2>Дима <button class="close-button">&times;</button></h2><h3>Осетров</h3><p>О себе:
 Увлекаюсь смешанными единоборствами. Местами тихий, нахожу со всеми общий язык.</p></div></div></div>
     <div class="modal team-modal" id="modal-ivan"><div class="modal-body"><img src="2.png" alt="Фото Ивана"><div class="team-modal-content"><h2>Рома <button class="close-button">&times;</button></h2><h3>Клименко</h3><p>Бебебе</p></div></div></div>
